# python-webassembly-rust

./: .gitignore  README.md  alg.py  requirements.txt  run-alg.py  run-hello.py  run-markdown.py  run-rosetta.py  util.py  wasi_alg.wasm
hello/: Cargo.toml  bindings.py
hello/src/: lib.rs
hello/wits/: say.wit
md/: Cargo.toml  bindings.py
md/src/: lib.rs
md/wits/: markdown.wit
rosetta/: Cargo.toml  bindings.py
rosetta/src/: lib.rs
rosetta/wits/: rosetta.wit
wasi-alg/: Cargo.toml
wasi-alg/src/: lib.rs
